// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BhText.vue without initial formatters renders correctly 1`] = `
<bhinput-stub>
  <div class="bh-text">
    <!---->
    <input type="text" class="bh-text__input"> </div>
</bhinput-stub>
`;

exports[`BhText.vue without initial formatters with small size renders correctly 1`] = `
<bhinput-stub>
  <div class="bh-text bh-text--small">
    <!---->
    <input type="text" class="bh-text__input"> </div>
</bhinput-stub>
`;
